# Viewer

./: .gitignore  CMakeLists.txt  README.md
FEMLib/: CMakeLists.txt
FEMLib/include/Matrix/: COOMatrix.h  CSRMatrix.h  FEMatrix.h  Matrix.h  NSMatrix.h  SKRMatrix.h  diagMatrix.h  normalMatrix.h
FEMLib/include/Mesh/: Mesh.h
FEMLib/include/linalg/: cholesky.h  fem.h  systemSolve.h
FEMLib/include/utils/: FEMdata.h  MultiGrid.h  NameSpace.h  NavierStokesSolver.h  TArray.h  timer.h  vec3.h
FEMLib/src/Matrix/: COOMatrix.cpp  CSRMatrix.cpp  FEMatrix.cpp  SKRMatrix.cpp  diagMatrix.cpp
FEMLib/src/Mesh/: Mesh.cpp
FEMLib/src/linalg/: cholesky.cpp  fem.cpp  systemSolve.cpp
FEMLib/src/utils/: FEMdata.cpp  MultiGrid.cpp  NavierStokesSolver.cpp
MatrixVisualizer/: MatrixVisualizer.h
Project/: MatrixVisualizer.cpp  NSController.cpp  NSController.h  project.cpp
include/: Application.h  Camera.h  InputController.h  LeftPanel.h  LeftPanel.ui  MainWindow.h  Material.h  MaterialManager.h  Object.h  ObjectController.h  OpenGLWidget.h  Scene.h  Shader.h  ShaderManager.h  TextureManager.h
lib/include/utils/: Viewer.h
lib/src/utils/: NavierStokesSolver.cpp
resources/items/: items.qrc
resources/shaders/: basic_vertex.glsl  blinn_phong_fragment.glsl  blinn_phong_vertex.glsl  pbr_fragment.glsl  pbr_vertex.glsl  shaders.qrc
shaders/: basic_fragment.glsl  vertex_shader.glsl
src/: Application.cpp  Camera.cpp  InputController.cpp  LeftPanel.cpp  MainWindow.cpp  Material.cpp  MaterialManager.cpp  Object.cpp  OpenGLWidget.cpp  Scene.cpp  Shader.cpp  ShaderManager.cpp  TextureManager.cpp
tests/: MV.cpp  Qttest.cpp  test.cpp
